--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -5,7 +5,7 @@ jobs:
     run-shell-commands:
         runs-on: ubuntu-latest
         steps:
-            - name: echo a string
+            - name: Echo a string
               run: echo "Hello world"
             - name: Multi line command
               run: |
