--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -24,7 +24,7 @@ jobs:
         needs: run-shell-commands
         steps:
             - name: Windows Jobs "Echo string"
-              run: Write-Outout "Windoes String"
+              run: Write-Output "Windoes String"
 
             - name: Workflow command does not exist
               run: doesnotexist
