--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -23,15 +23,14 @@ jobs:
 
               # Setting a notice message
             - name: Setting a notice message with parameters
-              run: echo "::notice title=Notice title, file=spp.js, line=3, endLine=4, col=5, endColumn=7::Missing Semi column"
+              run: echo "::notice title=Notice title, file=app.js, line=3, endLine=4, col=5, endColumn=7::Missing Semi column"
 
             - name: Group of logs
               run: |
                   echo "::group:: My group title"
                   echo "inside group"
                   echo "Some other sting to be echoed in the group"
-                  echo "Hello world"
-                  echo Notice
+                  echo "Hello world Notice"
                   echo "::endgroup::"
 
             # Masking values so they dont get show on the jobs
