--- a/.github/workflows/working-dirs.yaml
+++ b/.github/workflows/working-dirs.yaml
@@ -5,18 +5,7 @@ jobs:
     display-working-dirs-info:
         runs-on: ubuntu-latest
         steps:
-            - name: Displa working Directory and List Files - Ubuntu
-              run: |
-                  pwd
-                  ls -a
-                  echo $GITHUB_SHA
-                  echo $GITHUB_REPOSITORY
-                  ehco $GITHUB_WORKSPACE
-
-    display-working-dirs-info-windows:
-        runs-on: windows-latest
-        steps:
-            - name: Displa working Directory and List Files - Windows
+            - name: Display working Directory and List Files - Ubuntu
               run: |
                   pwd
                   ls -a
@@ -24,3 +13,14 @@ jobs:
                   echo $GITHUB_SHA
                   echo $GITHUB_REPOSITORY
                   ehco $GITHUB_WORKSPACE
+    # Windows jobs
+    display-working-dirs-info-windows:
+        runs-on: windows-latest
+        steps:
+            - name: Display working Directory and List Files - Windows
+              run: |
+                  Get-Location
+                  dir
+                  echo $env:GITHUB_SHA
+                  echo $env:GITHUB_REPOSITORY
+                  ehco $env:GITHUB_WORKSPACE
