--- a/.github/workflows/working-dirs.yaml
+++ b/.github/workflows/working-dirs.yaml
@@ -1,6 +1,9 @@
 name: Working Dirs & Shells
 on: [push]
-
+# Specify with shell to use
+defaults:
+    run:
+        shell: bash
 jobs:
     display-working-dirs-info:
         runs-on: ubuntu-latest
@@ -24,3 +27,22 @@ jobs:
                   dir
                   echo $env:GITHUB_SHA
                   echo $env:GITHUB_REPOSITORY
+
+    display-working-dirs-info-windows-overide:
+        runs-on: windows-latest
+        # Overide shell
+        defaults:
+            run:
+                shell: pwsh
+        steps:
+            - name: Display working Directory and List Files - Windows
+              # Get-Location
+              #dir
+              run: |
+                  pwd
+                  ls -a
+                  mkdir test-folder
+                  ls -a
+                  echo $env:GITHUB_SHA
+                  echo $env:GITHUB_REPOSITORY
+                  ehco $env:GITHUB_WORKSPACE
