--- a/.github/workflows/working-dirs.yaml
+++ b/.github/workflows/working-dirs.yaml
@@ -23,7 +23,7 @@ jobs:
         steps:
             - name: Display working Directory and List Files - Windows
               run: |
-                  Get-Location
-                  dir
+                  pwd 
+                  ls -a
                   echo $env:GITHUB_SHA
                   echo $env:GITHUB_REPOSITORY
