Added new command to override bash.

--- a/.github/workflows/working-dirs.yaml
+++ b/.github/workflows/working-dirs.yaml
@@ -25,5 +25,24 @@ jobs:
               run: |
                   pwd 
                   ls -a
+                  mkdir test-folder
+                  ls -a
                   echo $env:GITHUB_SHA
                   echo $env:GITHUB_REPOSITORY
+
+    display-working-dirs-info-windows-overide:
+        runs-on: windows-latest
+        # Overide shell
+        defaults:
+            run:
+                shell: pwsh
+        steps:
+            - name: Display working Directory and List Files - Windows
+              #
+              #dir
+              run: |
+                  Get-Location
+                  dir
+                  echo $env:GITHUB_SHA
+                  echo $env:GITHUB_REPOSITORY
+                  ehco $env:GITHUB_WORKSPACE
