--- a/.github/workflows/working-dirs.yaml
+++ b/.github/workflows/working-dirs.yaml
@@ -29,7 +29,7 @@ jobs:
                   echo $GITHUB_REPOSITORY
             # Change a working dir
             - name: Change working Directory
-              working-directory: /d/a/gh-actions
+              working-directory: /d/a/
               run: pwd
 
     display-working-dirs-info-windows-overide:
