--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -10,8 +10,9 @@ jobs:
             - name: Checkout
               run: |
                   git init
-                  git remote add orgin 'https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git'
+                  git remote add origin 'https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git'
                   git fetch origin
+                  git branch
                   git checkout main
             - name: List files after
               run: ls -a
