--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -16,3 +16,12 @@ jobs:
                   git checkout main
             - name: List files after
               run: ls -a
+    checkout-action:
+        runs-on: ubuntu-latest
+        steps:
+            - name: List files before
+              run: ls -a
+            - name: Checkout with actions from market place
+              uses: actions/checkout@v3
+            - name: List files before
+              run: ls -a
